[tool.poetry]
name = "hw5"
version = "0.1.0"
description = ""
authors = ["HelenNad <htkachenko88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
